<?xml version="1.0" encoding="utf-8"?>
<resources>
	
	<string name="about_msg">This app was created for the project of Indoor positioning system, based on the UHF RFID technology. The system was developed at the University of Erlangen-Nuremberg, Technical Faculty, Chair of Information Technology. The app provides localization and navigation capabilities using information about found tags and the surrounding environment of the building. For more detailed description of the features please refer to the Guide.</string>
	<string name="help_msg">Here will be the information about proper using of this application</string>
	<string name="about_title"><b>About this application</b></string>
	<string name="help_title"><b>How to use this application</b></string>
	<string name="error_configuration">Please configure your serial port first.</string>
	<string name="error_security">You do not have read/write permission to the serial port.</string>
	<string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
	<string name="app_name"><b>RFID and NFC indoor positioning</b></string>
	<string name="menu_titel"><b>Menu</b></string>
	<string name="testmode_titel">Test Mode</string>
	<string name="reader_titel">Reader Registers List</string>
	<string name="reader_settings_titel">Reader Settings</string>
	<string name="menulabeltext">MENU</string>
	<string name="testlabel">Test Mode</string>
	<string name="findlabel">Find Room</string>
	<string name="googlelabel">Google Maps</string>
	<string name="tagAmount_label">Amount of available tags:</string>
	<string name="backlabel1">Back to main screen</string>
	<string name="menulabel">MENU</string>
	<string name="readerreg_label">Reader registers</string>
	<string name="maincontrollabel">Main control:</string>
	<string name="statusreglabel">Status registers:</string>
	<string name="R00label">Chip status control:</string>
	<string name="R01label">Protocol control:</string>
	<string name="protocolsetlabel">Protocol Sub-Settings:</string>
	<string name="R02label">TX options Gen2:</string>
	<string name="R03label">RX options Gen2:</string>
	<string name="R04label">TRcal L register Gen2:</string>
	<string name="R05label">TRcal H and misc:</string>
	<string name="R06label">TX replay in slot:</string>
	<string name="R07label">RX no response wait:</string>
	<string name="R08label">RX wait time:</string>
	<string name="R09label">RX special setting:</string>
	<string name="R0Alabel">RX special setting2:</string>
	<string name="R0Blabel">Regulator and IO control:</string>
	<string name="R14label1">CL_SYS, CP 0..7:</string>
	<string name="R14label2">CL_SYS, CP 8..15:</string>
	<string name="R14label3">CL_SYS, CP 16..23:</string>
	<string name="R15label1">Modulator control 0..7:</string>
	<string name="R15label2">Modulator control 8..15:</string>
	<string name="R15label3">Modulator control 16..23:</string>
	<string name="R16label1">PLL main 0..7:</string>
	<string name="R16label2">PLL main 8..15:</string>
	<string name="R16label3">PLL main 16..23:</string>
	<string name="R17label1">PLL auxiliary 0..7:</string>
	<string name="R17label2">PLL auxiliary 8..15:</string>
	<string name="R17label3">PLL auxiliary 16..23:</string>
	<string name="R0Flabel">RSSI level:</string>
	<string name="R00contentlabel">0x00</string>
	<string name="R01contentlabel">0x06</string>
	<string name="R02contentlabel">0xF0</string>
	<string name="R03contentlabel">0x60</string>
	<string name="R04contentlabel">0x35</string>
	<string name="R05contentlabel">0x05</string>
	<string name="R06contentlabel">0x00</string>
	<string name="R07contentlabel">0x04</string>
	<string name="R08contentlabel">0x07</string>
	<string name="R09contentlabel">0x41</string>
	<string name="R0Acontentlabel">0x01</string>
	<string name="R0Bcontentlabel">0x02</string>
	<string name="R14contentlabel1">0x00</string>
	<string name="R14contentlabel2">0x04</string>
	<string name="R14contentlabel3">0x40</string>
	<string name="R15contentlabel1">0x02</string>
	<string name="R15contentlabel2">0x3F</string>
	<string name="R15contentlabel3">0x00</string>
	<string name="R16contentlabel1">0x40</string>
	<string name="R16contentlabel2">0xD8</string>
	<string name="R16contentlabel3">0x4F</string>
	<string name="R17contentlabel1">0x01</string>
	<string name="R17contentlabel2">0x10</string>
	<string name="R17contentlabel3">0x46</string>
	<string name="R0Fcontentlabel">0x00</string>
	<string name="readerset_label">Reader settings</string>
	<string name="RXonoff_label">RX on / off</string>
	<string name="RFonoff_label">RF on / off</string>
	<string name="reader_label">Reader</string>
	<string name="red">Red</string>
	<string name="blue">Blue</string>
	<string name="ok_label">OK</string>
	<string name="plus_label"> + </string>
	<string name="minus_label"> - </string>
	<string name="prefs_bluetooth_settings_title">Bluetooth</string>
	<string name="prefs_bluetooth_settings_summary">go to Bluetooth System Settings&#8230;</string>
	<string name="prefs_comm_type_title">Communication type</string>

    <string name="theme_title">Interface theme</string>
    <string-array name="themes_entries">
        <item>Holo dark</item>
        <item>Classic light</item>
        <item>Funny green</item>
    </string-array>
    <string-array name="themes_values">
        <item>dark</item>
        <item>light</item>
        <item>green</item>
    </string-array>

</resources>
